--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "start:dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
+    "postbuild": "ncp ./src/config/db-certificate.pem ./dist/config/db-certificate.pem",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "redis:start": "redis-server redis.conf",
@@ -27,12 +28,14 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "cpx": "^1.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "pg": "^8.15.5",
     "redis": "^4.7.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
@@ -42,9 +45,11 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/pg": "^8.11.14",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
+    "ncp": "^2.0.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6"
